fix broken CSS

--- a/style-homepage.css
+++ b/style-homepage.css
@@ -34,10 +34,10 @@
   /* ------- article ------- */
   
   article {
-    padding: 10em 5vw 10em 5vw;
+    padding: 0 5vw 0 5vw;
     display: block;
-    position: absolute;
-    top: 0;
+    position: relative;
+    top: -1em;
     min-height: 100vh;
     max-width: 100ch;
     background: var(--bgcolor);
@@ -47,12 +47,12 @@
   /* ------- Header ------- */
   
   header {
-    padding: 2em 0 1em 5vw;
+    padding: 2em 0 0 5vw;
     display: block;
     flex-wrap: wrap;
-    position: absolute;
+    position: relative;
     width: 100%;
-    z-index: 2;
+    background: var(--bgcolor);
   }
   
   header h1 {
@@ -70,9 +70,7 @@
     background-color: var(--accentbgcolor);
   }
   
-  
   /* ------- General ------- */
-
 
   a {
     text-decoration: underline;
@@ -90,7 +88,7 @@
     padding: 1em 0 0 0;
     text-align: center;
   }
-  
+
   p, ul, ol, article, h2, h3, h4 {
     max-width: 100%;
     margin-bottom: 1em;
